terraform/nic.tf
resource "azurerm_network_interface" "nic" {
  name = "nic-cp2"
  location = var.location
  resource_group_name = var.resource_group_name
  tags = var.tags

  ip_configuration {
    name = "ipconfig1"
    subnet_id = azurerm_subnet.subnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id = azurerm_public_ip.pip.id
  }
}

resource "azurerm_network_interface_security_group_association" "nic_nsg" {
  network_interface_id = azurerm_network_interface.nic.id
  network_security_group_id = azurerm_network_security_group.nsg.id
}
