terraform/vm.tf
resource "azurerm_linux_virtual_machine" "vm" {
  name = "vm-cp2"
  location = var.location
  resource_group_name = azurerm_resource_group.rg.name
  size                = "Standard_D2s_v3"
  admin_username      = "azureuser"

  network_interface_ids = [ 
    azurerm_network_interface.nic.id
   ]

  admin_ssh_key {
    username = "azureuser"
    public_key = tls_private_key.ssh_key.public_key_openssh
  }

  os_disk {
    caching = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts"
    version   = "latest"
  }

  tags = var.tags
}
